--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,11 +1,33 @@
 version: '3.3'
+volumes:
+  pg_data:
+  static:
+
 services:
+  db:
+    image: postgres:13.10
+    env_file:
+      - ../.env
+    volumes:
+      - pg_data:/var/lib/postgresql/pg_data
+
+  backend:
+    build: ../backend/
+    env_file:
+      - ../.env
+    depends_on:
+      - db
+    volumes:
+      - static:/backend_static
 
   frontend:
     container_name: foodgram-front
     build: ../frontend
+    command: cp -r /app/build/. /frontend_static/
     volumes:
       - ../frontend/:/app/result_build/
+      - static:/frontend_static
+
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
@@ -13,5 +35,4 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - static:/usr/share/nginx/html
