--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     client_max_body_size 10M;
 
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -9,8 +14,8 @@ server {
     
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
+        index index.html index.htm;
         try_files $uri /index.html;
-      }
-
+    }
+    
 }
