--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -7,15 +7,16 @@ server {
         proxy_pass http://backend:8000/admin/;
     }
 
+    location /api/docs/ {
+        try_files $uri /docs/redoc.html;
+    }
+
     location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
+    
     
     location / {
         root /usr/share/nginx/html;
