--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
@@ -19,6 +20,7 @@ services:
       - db
     volumes:
       - static:/backend_static
+      - media:/app/media
 
   frontend:
     container_name: foodgram-front
@@ -36,3 +38,4 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/usr/share/nginx/html
+      - media:/app/media
