--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,12 +12,13 @@ server {
     }
 
     location /api/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
     }
 
-    
-    
+    location /media/ {
+        alias /app/media/;
+  }
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
