--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   db:
     image: postgres:13.10
     env_file:
-      - ../.env
+      - ../.env/
     volumes:
       - pg_data:/var/lib/postgresql/pg_data
 
