--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.3'
 volumes:
-  pg_data:
+  pg_data_production:
   static:
-  media:
+  media_production:
 
 services:
   db:
@@ -10,7 +10,7 @@ services:
     env_file:
       - ../.env
     volumes:
-      - pg_data:/var/lib/postgresql/pg_data
+      - pg_data_production:/var/lib/postgresql/pg_data
     ports:
       - 5432:5432
   backend:
@@ -21,7 +21,7 @@ services:
       - db
     volumes:
       - static:/backend_static
-      - media:/app/media
+      - media_production:/app/media
 
   frontend:
     container_name: foodgram-front
@@ -35,8 +35,8 @@ services:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/usr/share/nginx/html
-      - media:/app/media
+      - media_production:/app/media
