--- a/.github/main.yml
+++ b/.github/main.yml
@@ -39,7 +39,7 @@ jobs:
         python -m flake8 backend/
         pytest
   build_and_push_to_docker_hub:
-    if: github.ref == 'refs/heads/main
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: tests
     steps:
