--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         python -m flake8 backend/
         pytest
   build_and_push_to_docker_hub:
-    if: github.ref == 'refs/heads/main
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -78,7 +78,7 @@ jobs:
         cd frontend/
         npm run test
   build_frontend_and_push_to_docker_hub:
-    if: github.ref == 'refs/heads/main
+    if: github.ref == 'refs/heads/main'
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
@@ -99,7 +99,7 @@ jobs:
           push: true
           tags: lalaku/foodgram_frontend:latest
   build_gateway_and_push_to_docker_hub:
-    if: github.ref == 'refs/heads/main
+    if: github.ref == 'refs/heads/main'
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -119,7 +119,7 @@ jobs:
           push: true
           tags: lalaku/foodgram_proxy:latest
   deploy:
-    if: github.ref == 'refs/heads/main
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: 
       - build_and_push_to_docker_hub
