--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd frontend/
-        npm install --legacy-peer-deps
+        npm install
         npm ci
 
     - name: Test frontend
