--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,30 +58,10 @@ jobs:
           context: ./backend/
           push: true
           tags: lalaku/foodgram_backend:latest
-  frontend_tests:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up nodeJS
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-
-    - name: Install dependencies
-      run: |
-        cd frontend/
-        npm install
-
-    - name: Test frontend
-      run: |
-        cd frontend/
-        npm run test
   build_frontend_and_push_to_docker_hub:
     if: github.ref == 'refs/heads/main'
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -115,7 +95,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./infra/
+          context: ./nginx/
           push: true
           tags: lalaku/foodgram_proxy:latest
   deploy:
