--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         DB_PORT: 5432
       run: |
         python -m flake8 backend/
-        pytest .\backend\
+        pytest ./backend/
   build_and_push_to_docker_hub:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
