--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,6 +153,8 @@ jobs:
         script: |
           cd foodgram/infra
           sudo docker compose -f docker-compose.production.yml stop
+          sudo docker compose -f docker-compose.production.yml rm backend
+          sudo docker image rm lalaku/foodgram_backend
           sudo docker compose -f docker-compose.production.yml up --build -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
